# Univerisity

./: README.md
Sem 1/Computer systems architecture/: Notes.one
Sem 1/Fundamentals of programing/a1/: p2.py
Sem 1/Fundamentals of programing/a1-alexzmmv/: p1.py  p3.py
Sem 1/Fundamentals of programing/a10/src/: !settings.properties  start.py
Sem 1/Fundamentals of programing/a2/: Asigment2.py
Sem 1/Fundamentals of programing/a3/: main.py
Sem 1/Fundamentals of programing/a4/: 10_iterative.py  10_recursive.py  4dp.py  4naive.py
Sem 1/Fundamentals of programing/a5/src/: program.py
Sem 1/Fundamentals of programing/a6/src/: functions.py  start.py  ui.py
Sem 1/Fundamentals of programing/e/src/: start.py  test.py
Sem 1/Mathematical Anlaisis/Homework10/: main.py
Sem 1/Mathematical Anlaisis/Some work/: main2.py
Sem 1/Mathematical Anlaisis/e_homwork4/: main.py
Sem 1/Mathematical Anlaisis/homework7/: main.py
Sem 2/DSA/Lab0/FixedCapBiMap/: App.cpp  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  ShortTest.cpp
Sem 2/DSA/Lab1/FixedCapBiMap/: ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp  FixedCapBiMapIterator.h
Sem 2/DSA/Lab3/: CMakeLists.txt  Matrix.cpp  Matrix.h
Sem 2/DSA/Lab4-DSA-SSM-DLL/: CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
Sem 2/DSA/Lab5_DSA/: ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
Sem 2/DSA/Lab6/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Sem 2/DSA/Lab7-DSA/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  SortedIndexeList.cpp  SortedIndexedList.h
Sem 2/Graph algorithms/Final/: Graph.py  UI.py  run.py
Sem 2/OOP/a1-alexzmmv-1/: CMakeLists.txt  main.cpp
Sem 2/OOP/a10-alexzmmv/: CMakeLists.txt  default.db  default.txt  run.cpp
Sem 2/OOP/a10-alexzmmv/Controller/: Controller.cpp  Controller.h  CrudeCommands.h
Sem 2/OOP/a10-alexzmmv/Domain/: Activity.cpp  DateTime.cpp
Sem 2/OOP/a10-alexzmmv/Repo/: DataBaseRepo.h  FileRepo.cpp  FileRepo.h
Sem 2/OOP/a10-alexzmmv/UI/: Console_ui.cpp  graphical_ui.cpp  graphical_ui.h
Sem 2/OOP/a10-alexzmmv/UI/Planner_gui_things/: UserPlannerModel.cpp  UserPlannerModelForGui.h
Sem 2/OOP/a10-alexzmmv/UserPlanner/: UserPlanner.cpp  UserPlanner.h  csvUserPlanner.cpp  csvUserPlanner.h  htmlUserPlanner.cpp  htmlUserPlanner.h
Sem 2/OOP/a10-alexzmmv/test/: test.h
Sem 2/OOP/a10-alexzmmv/utils/: DIagramCode.uml
Sem 2/OOP/a2-3-alexzmmv/: !Run.c
Sem 2/OOP/a2-3-alexzmmv/Controller/: Controller.c  Controller.h
Sem 2/OOP/a2-3-alexzmmv/Domain/: domain.c  domain.h
Sem 2/OOP/a2-3-alexzmmv/Dynamic_arr/: dynamic_array.c  dynamic_array.h
Sem 2/OOP/a2-3-alexzmmv/Repo/: repository.c  repository.h
Sem 2/OOP/a2-3-alexzmmv/UI/: UI.c  UI.h
Sem 2/OOP/a2-3-alexzmmv/VoidDynamicalArray/: DynamicalvArray.c  DynamicalvArray.h
Sem 2/OOP/a2-3-alexzmmv/tests/: test.c  test.h
Sem 2/OOP/a4-5-alexzmmv/: main.cpp
Sem 2/OOP/a6-7-alexzmmv/: run.cpp
Sem 2/OOP/a6-7-alexzmmv/Controller/: Controller.cpp  Controller.h
Sem 2/OOP/a6-7-alexzmmv/Repo/: DataBaseRepo.cpp
Sem 2/OOP/a6-7-alexzmmv/UI/: Console_ui.cpp  Console_ui.h
Sem 2/OOP/a6-7-alexzmmv/UserPlanner/: UserPlanner.cpp  csvUserPlanner.cpp  htmlUserPlanner.cpp  htmlUserPlanner.h
Sem 2/OOP/a8-9-alexzmmv/: default.db  run.cpp
Sem 2/OOP/a8-9-alexzmmv/Controller/: Controller.cpp  Controller.h  CrudeCommands.h
Sem 2/OOP/e-913-916-alexzmmv/: CourierCompany.cpp  CourierCompany.h  Observer.h  Repository.cpp  Repository.h  courierWindow.cpp  courierWindow.h  couriers.txt  main.cpp  packages.txt
Sem 2/OOP/oop-a4-5-alexzmmv/: CMakeLists.txt
Sem 2/OOP/t2-alexzmmv/: CMakeLists.txt  Service.cpp  Service.h  UI.cpp  UI.h  building.cpp  building.h  run.cpp
Sem 2/OOP/t3-alexzmmv/: Eq.cpp  Eq.h  GUI.cpp  GUI.h  Services.cpp  Services.h  input.txt  run.cpp
Sem 3/Databases/: Lab1.sql
Sem 3/English/: info week 2 worksheet.docx
Sem 3/PLF/Lab 2/: Lab2.pl  Statement.md
Sem 3/PLF/Seminar 1/: S1-2.pl  S1.pl
Sem 3/PS/Lab 1/: Lab1.m
Sem 3/Retele/Lab 1/: Lab1 client.py  Lab1 server.py
(+126 files in other folders)
